--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
                         <li uib-dropdown>
                             <a href="#" uib-dropdown-toggle>Users <b class="caret"></b></a>
                             <ul class="uib-dropdown-menu">
+                                <li><a href="#/login">Login</a></li>
                                 <li><a href="#/register">Register</a></li>
                                 <li><a href="#/show">Show All</a></li>
 
@@ -90,6 +91,7 @@
         <script src="bower_components/lodash/dist/lodash.js" type="text/javascript"></script>
         <script src="app.js"></script>
         <script src="home/home.js"></script>
+        <script src="login/login.js"></script>
         <script src="view2/view2.js"></script>
         <script src="register/register.js"></script>
         <script src="offers/offers.js"></script>
