--- a/app/index.html
+++ b/app/index.html
@@ -20,9 +20,30 @@
 
     </head>
     <body>
-        <nav class="navbar-inverse">
+        <nav class="navbar-inverse" >
 
-            <div class="container" ng-controller="homeCtrl">
+            <div class="container" ng-controller="homeCtrl" ng-show="!authenticated">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" ng-click="isCollapsed = !isCollapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Power Trader</a>
+                </div>
+                <div id="navbar" class="collapse navbar-collapse" uib-collapse="!isCollapsed" >
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#/register">Register</a></li>
+                        <li><a href="#/login">Login</a></li>
+                    </ul>
+                </div><!--/.nav-collapse -->
+            </div>
+
+
+            <div class="container" ng-controller="homeCtrl" ng-show="authenticated">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" ng-click="isCollapsed = !isCollapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
@@ -39,9 +60,6 @@
                         <li uib-dropdown>
                             <a href="#" uib-dropdown-toggle>Users <b class="caret"></b></a>
                             <ul class="uib-dropdown-menu">
-                                <li><a href="#/login">Login</a></li>
-                                <li><a href="" ng-click="logout()">Logout</a></li>
-                                <li><a href="#/register">Register</a></li>
                                 <li><a href="#/show">Show All</a></li>
 
                             </ul>
@@ -55,9 +73,13 @@
 
                             </ul>
                         </li>
+                        <li><a href="" ng-click="logout()">Logout {{user.username}}</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
+
+
+
         </nav>
 
         <div class="container" ng-view>
@@ -92,6 +114,8 @@
         <script src="bower_components/lodash/dist/lodash.js" type="text/javascript"></script>
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="app.js"></script>
+        <script src="services/response.js"></script>
+        <script src="services/user.js"></script>
         <script src="home/home.js"></script>
         <script src="login/login.js"></script>
         <script src="view2/view2.js"></script>
